--- a/style.css
+++ b/style.css
@@ -1,76 +1,76 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     color: #fff;
 }
-#nav-item{
+
+#nav-item {
     position: relative;
     right: 20%;
 }
-#nav-item a{
+
+svg {
+    padding: 10px 50px;
+}
+
+#nav-item a {
     /* transition: forwards 2s ease 1s; */
-    transition: transform 300ms;
+    transition: transform 200ms;
     cursor: pointer;
 }
+
 #nav-item a:hover {
     color: rgb(144, 144, 144);
     font-size: 15px;
     transform: scale(1.5);
 
 }
-.contain{
+
+.contain {
     height: 100vh;
     width: 100%;
-    
+
 }
-.banner{
+
+.banner {
+    overflow: none;
     width: 100%;
     height: 90vh;
-    background-image: 
-    linear-gradient(90deg,#181811
-    10%,hsla(0,0%,9%,.98)
-    20%,hsla(0,0%,9%,.97)
-    25%,hsla(0,0%,9%,.96)
-    35%,hsla(0,0%,9%,.95)
-    40%,hsla(0,0%,9%,.92)
-    45%,hsla(0,0%,9%,.19)
-    50%,hsla(0,0%,9%,.17)
-    53%,hsla(0,0%,9%,.15)
-    58%,hsla(0,0%,9%,.12)
-    60%,hsla(0,0%,9%,.15)
-    65%,hsla(0,0%,9%,.13)
-    70%,hsla(0,0%,9%,.10)
-    75%,hsla(0,0%,9%,.10)
-    80%,hsla(0,0%,9%,.10)
-    85%,hsla(0,0%,9%,.18)
-    90%,hsla(0,0%,9%,.10)
-    95%,hsla(0,0%,9%,.00))
-    ,url(assets/.img/pic2.jpg);
+    background-image:
+        linear-gradient(90deg, #181811 10%, hsla(0, 0%, 9%, .98) 20%, hsla(0, 0%, 9%, .97) 25%, hsla(0, 0%, 9%, .96) 35%, hsla(0, 0%, 9%, .95) 40%, hsla(0, 0%, 9%, .92) 45%, hsla(0, 0%, 9%, .19) 50%, hsla(0, 0%, 9%, .17) 53%, hsla(0, 0%, 9%, .15) 58%, hsla(0, 0%, 9%, .12) 60%, hsla(0, 0%, 9%, .15) 65%, hsla(0, 0%, 9%, .13) 70%, hsla(0, 0%, 9%, .10) 75%, hsla(0, 0%, 9%, .10) 80%, hsla(0, 0%, 9%, .10) 85%, hsla(0, 0%, 9%, .18) 90%, hsla(0, 0%, 9%, .10) 95%, hsla(0, 0%, 9%, .00)), url(assets/.img/pic2.jpg);
     filter: brightness(90%);
     background-size: cover;
     background-position: 69%;
-    box-shadow: 0 6px 20px 0 rgba(158, 158, 154, 0.2), 0 6px 20px 0 rgba(172, 172, 169, 0.19);
 
-  
+
 }
 
-.contain .banner .banner-text h1{
+.contain .banner .banner-text {
+    margin-left: 100px;
+    padding-bottom: 200px;
+}
+
+.contain .banner .banner-text h1 {
     color: #fff;
-    font-weight: 700;
+    font-weight: 00;
     font-size: 8rem;
     font-family: 'Times New Roman', Times, serif;
     letter-spacing: 2px;
 }
-.contain .banner .banner-text h4{
+
+.contain .banner .banner-text h4 {
     color: rgb(238, 238, 10);
 }
-.contain .banner .banner-text h5{
+
+.contain .banner .banner-text h5 {
     color: #fff;
     font-family: 'Times New Roman', Times, serif;
 }
+
 #btn {
     border-radius: 2rem;
     background-color: transparent;
@@ -81,7 +81,8 @@ body{
     height: 40px;
     margin-top: 30px;
 }
-#btn a{
+
+#btn a {
     border-radius: 2rem;
     background-color: transparent;
     color: #fff;
@@ -91,80 +92,104 @@ body{
     height: 40px;
     margin-top: 30px;
 }
-#btn:hover{
+
+#btn:hover {
     size: 100px;
 }
-.banner-text{
+
+.banner-text {
     margin-left: 200px;
-    padding-top: 200px;
+    padding-top: 80px;
 }
-.banner-text h1
-{
+
+.banner-text h1 {
     margin-top: 20px;
 }
-.banner-text h5{
+
+.banner-text h5 {
     margin-top: 20px;
     word-spacing: 3px;
 }
-.contact-link{
+
+.contact-link {
     width: 15%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     height: 40px;
     margin-top: 20px;
     border-radius: 2rem;
-    letter-spacing: 2.5rem;
+    letter-spacing: .5rem;
     background-color: yellow;
+
 }
-.contact-link svg{
-    width: 30px;
-    height: 40px;
-    margin-left: 15px;
-    padding-top: 5px;
+
+.contact-link i {
+    font-size: 25px;
 }
+
+.contact-link a {
+    text-decoration: none;
+    color: black;
+}
+
 
 /* Details of About me Section */
 
-.container1 .about{
+.container1 .about {
     text-align: center;
     color: #fff;
     font-weight: thin;
     font-family: 'Times New Roman', Times, serif;
 }
-.container1 .about h1{
+
+.container1 .about h1 {
     font-size: 6rem;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.aboutme .details img{
+
+.aboutme .details img {
     padding-left: 50px;
     margin-top: 50px;
-    box-shadow: 0 4px 8px 0 rgb(49, 48, 48), 0 6px 20px 0 rgba(248, 246, 246, 0.19);
 }
+
 .aboutme .details .col {
     padding-left: 100px;
     margin-top: 200px;
 }
-.aboutme .details .col .row{
+
+.aboutme .details .col .row {
     margin-top: 50px;
     transition: transform 420ms;
     cursor: pointer;
 
 }
-.aboutme .details .col .row:hover{
+
+.aboutme .details .col .row:hover {
     font-size: 50px;
     transform: scale(1.09);
 }
-.aboutme .details .col .row p{
+
+.aboutme .details .col .row p {
     color: #fff;
     font-size: 1.5rem;
     font-family: 'Times New Roman', Times, serif;
 }
-.aboutme .details .col .row h3{
+
+.aboutme .details .col .row h3 {
     color: rgb(240, 240, 12);
     font-size: 2rem;
 }
-.aboutme .details{
+
+.aboutme img {
+    border-radius: 50%;
+}
+
+.aboutme .details {
     display: flex;
 }
-#btn_cv a{
+
+#btn_cv a {
     margin-top: 30px;
     width: 200px;
     height: 50px;
@@ -174,7 +199,8 @@ body{
     border-color: rgb(240, 240, 12);
     background-color: transparent;
 }
-#btn_cv{
+
+#btn_cv {
     margin-top: 30px;
     width: 200px;
     height: 50px;
@@ -183,21 +209,24 @@ body{
     border-color: rgb(240, 240, 12);
     background-color: transparent;
 }
-.services_header .services{
+
+.services_header .services {
     margin-top: 100px;
     display: flex;
     justify-content: space-between;
     box-shadow: 0 20px 70px 0 rgba(225, 250, 1, 0.2), 0 5px 30px 0 rgba(225, 253, 5, 0.19);
 }
-.services_header .services .tab_btn{
+
+.services_header .services .tab_btn {
     padding-top: 70px;
     margin-right: 100px;
 }
+
 .services_header .services .service_svg {
     padding-left: 50px;
 }
 
-#tab_btn{
+#tab_btn {
     width: 300px;
     height: 50px;
     color: #fff;
@@ -205,33 +234,37 @@ body{
     border-radius: 2rem;
     border-color: rgb(240, 240, 12);
 }
-.container{
+
+.container {
     display: flex;
     margin-top: 50px;
     background-color: transparent;
     justify-content: space-between;
 }
+
 .s-col {
     transition: transform 420ms;
     cursor: pointer;
 }
-.s-col:hover{
+
+.s-col:hover {
     transform: scale(1.09);
     box-shadow: 0 20px 70px 0 rgba(225, 250, 1, 0.2), 0 20px 70px 0 rgba(225, 253, 5, 0.19);
 
 }
+
 /* Skills Section */
 
 
-.skills-details{
+.skills-details {
     margin-top: 100px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0 20px 70px 0 rgba(225, 250, 1, 0.2), 0 5px 30px 0 rgba(225, 253, 5, 0.19);
+    box-shadow: 0 20px 40px 0 rgba(225, 250, 1, 0.2), 0 5px 10px 0 rgba(225, 253, 5, 0.19);
 
 }
 
-#skills-btn{
+#skills-btn {
     width: 300px;
     height: 50px;
     color: #fff;
@@ -239,18 +272,21 @@ body{
     border-radius: 2rem;
     border-color: rgb(240, 240, 12);
 }
+
 .skills .skills-details .skills-btn {
     padding-top: 70px;
     margin-right: 100px;
 }
-.skills .skills-details .skills-svg{
+
+.skills .skills-details .skills-svg {
     padding-left: 50px;
-    
+
 }
+
 /* .section .skills .skills-details .container .card .row{
     display: flex;
 } */
-#col{
+#col {
     display: flex;
 }
 
@@ -258,26 +294,30 @@ body{
     background-color: #222;
     color: #fff;
     font-family: 'Times New Roman', Times, serif;
-    
+
 }
+
 .skills .container .card .row .col .card-img {
     margin-left: 67%;
     transition: transform 400ms;
 }
+
 .skills .container .card .row .col .card-img:hover {
     transform: scale(1.09);
     box-shadow: 0 6px 20px 0 rgba(225, 250, 1, 0.2), 0 6px 20px 0 rgba(225, 253, 5, 0.19);
 
 }
-.skills .container .card .row .col .crd-details h3{
+
+.skills .container .card .row .col .crd-details h3 {
     width: 300px;
 }
-.skills .container .card .row .col .crd-details h5{
+
+.skills .container .card .row .col .crd-details h5 {
     width: 300px;
     color: grey;
 }
-#crd-btn
-{
+
+#crd-btn {
     background-color: yellow;
     color: black;
     font-weight: 700;
@@ -287,107 +327,125 @@ body{
     border: solid;
     border-radius: 2rem;
 }
-.skills .container .card .row .col .crd-details{
+
+.skills .container .card .row .col .crd-details {
     margin-top: 40px;
 }
-.skills .container .card .row .col .card-img1{
+
+.skills .container .card .row .col .card-img1 {
     margin-right: 65%;
     transition: transform 400ms;
 }
-.skills .container .card .row .col .card-img1:hover{
+
+.skills .container .card .row .col .card-img1:hover {
     transform: scale(1.09);
 
 }
-#contain-skills{
+
+#contain-skills {
     margin-top: 150px;
     transition: transform 400ms;
 }
-#contain-skills:hover{
+
+#contain-skills:hover {
     transform: scale(1.05);
 }
-.card-body2 h5{
+
+.card-body2 h5 {
     text-transform: uppercase;
     color: rgb(240, 240, 12);
     font-weight: bold;
-    
+
 }
-.card-body2 p{
+
+.card-body2 p {
     font-size: large;
 }
 
 
 /* Project Details */
 
-.prj-banner{
+.prj-banner {
     background-image: url(assets/prj-netflix.png);
     background-size: cover;
     background-position: 69%;
     align-items: center;
     height: 100vh;
-    
+
 
 }
-.prj-header
-{
+
+.prj-container .card {
+    display: flex;
+
+}
+
+.prj-header {
     margin-top: 150px;
     text-align: center;
     margin-left: 0px;
 }
-.prj-header h1{
+
+.prj-header h1 {
     margin-right: 100px;
     color: rgb(241, 241, 40);
     padding-bottom: 30px;
 }
 
 
-.prj-row{
-    width: 800px;
+.prj-row {
+    width: 200px;
     height: 80vh;
     display: flex;
-    
-    
+
+
 }
-.col{
-    width: 600px;
+
+.col {
+    width: 200px;
     height: 500px;
     margin-left: 70px;
 }
-.prj-img img{
-    width: 800px;
+
+.prj-img img {
+    width: 600px;
     height: 400px;
-    border-radius: 1rem;
     margin-top: 100px;
-    filter: brightness(60%);
-    transition: transform 400ms;
-}
-.prj-img img:hover{
-    transform: scale(1.09);
-    filter: brightness(100%);
-    box-shadow: 0 6px 20px 0 rgba(225, 250, 1, 0.2), 0 6px 20px 0 rgba(225, 253, 5, 0.19);
-    
+    transition: transform 300ms;
 }
 
-.prj-img-details h3{
+.prj-img img:hover {
+    transform: scale(1.09);
+    filter: brightness(100%);
+
+}
+
+.prj-img-details h3 {
     color: grey;
 }
-.prj-img-details h5{
+
+.prj-img-details h5 {
     color: white;
 }
-#client-details
-{
+
+#client-details {
     display: flex;
     text-align: center;
     justify-content: space-around;
 }
-#client-details h3{
+
+#client-details h3 {
     color: #fff;
     margin-top: 100px;
 }
-#client-details h5{
+
+#client-details h5 {
     color: rgb(156, 152, 72);
 }
-.prj-content{
+
+.prj-content {
     text-align: center;
+    display: flex;
     max-width: 80%;
     margin-left: 200px;
     color: #fff;
@@ -397,21 +455,23 @@ body{
 
 /* Achivements Section */
 
-.achievements_header .achievements{
+.achievements_header .achievements {
     display: flex;
     margin-top: 150px;
     padding-left: 50px;
     justify-content: space-between;
     box-shadow: 0 20px 70px 0 rgba(225, 250, 1, 0.2), 0 5px 30px 0 rgba(225, 253, 5, 0.19);
 
-    
+
 }
-.ach_btn{
+
+.ach_btn {
     margin-top: 50px;
     padding-right: 100px;
-    
+
 }
-#ach_btn{
+
+#ach_btn {
     width: 300px;
     height: 50px;
     color: #fff;
@@ -421,19 +481,21 @@ body{
 }
 
 
-.achive{
+.achive {
     background-color: transparent;
     width: 100%;
     height: 80vh;
     border: none;
-    border-color: none; 
-    border-radius: 0rem;                      
-    
+    border-color: none;
+    border-radius: 0rem;
+
 }
-.ach-details .row{
+
+.ach-details .row {
     margin-top: 90px;
 }
-.ach-2 .ach-2-details .row{
+
+.ach-2 .ach-2-details .row {
     margin-top: 10px;
 }
 
@@ -441,61 +503,69 @@ body{
 
 /* Footer Details */
 
-.foot-details{
+.foot-details {
     text-align: center;
     margin-top: 200px;
 }
-.foot-de{
+
+.foot-de {
     margin-top: 130px;
 }
-.foot-top h4{
+
+.foot-top h4 {
     color: rgb(246, 246, 67);
 }
-.ft1 h3
-{
- color: rgb(253, 253, 253);
- font-weight: 700;
+
+.ft1 h3 {
+    color: rgb(253, 253, 253);
+    font-weight: 700;
 }
-.ft1 h5{
+
+.ft1 h5 {
     color: #fff;
 }
-.ft2 h3 a{
+
+.ft2 h3 a {
     text-decoration: none;
     color: rgb(185, 185, 55);
 }
-.ft2 h5 a{
+
+.ft2 h5 a {
     text-decoration: none;
     color: grey;
-    
+
 }
-.ft2 h5 a:hover{
-   
+
+.ft2 h5 a:hover {
+
     color: #fff;
 }
 
 /* Contact */
 .footer-cta {
     border-bottom: 1px solid #373636;
-  }
+}
 
 .single-cta i {
     color: #fff;
     font-size: 30px;
     float: left;
     margin-top: 8px;
-  }
-  .cta-text {
+}
+
+.cta-text {
     padding-left: 15px;
     display: inline-block;
-  }
-  .cta-text h4 {
+}
+
+.cta-text h4 {
     color: #fff;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 2px;
-  }
-  .cta-text span {
+}
+
+.cta-text span {
     color: #757575;
     font-size: 15px;
-  }
-
+}
